[gd_scene load_steps=113 format=3 uid="uid://cx1itsn05qspl"]

[ext_resource type="Script" path="res://assets/scripts/nucleo_03/actividad_02.gd" id="1_4o8yq"]
[ext_resource type="Texture2D" uid="uid://dcq2wgwnr46is" path="res://img/nucleo_03/fondo/linea_3_1.png" id="2_3nytm"]
[ext_resource type="Texture2D" uid="uid://l6g117mhhsov" path="res://img/nucleo_03/fondo/linea_3_2.png" id="3_02kqa"]
[ext_resource type="Texture2D" uid="uid://61ycy6jtkkec" path="res://img/nucleo_03/fondo/linea_3_3.png" id="4_1yo4i"]
[ext_resource type="Texture2D" uid="uid://dalh3bqotf8x5" path="res://img/nucleo_03/fondo/linea_3_4.png" id="5_adinq"]
[ext_resource type="Texture2D" uid="uid://dvv84st5np1n2" path="res://img/nucleo_03/fondo/linea_3_5.png" id="6_7de5t"]
[ext_resource type="Texture2D" uid="uid://shccpy08hekl" path="res://img/nucleo_03/fondo/linea_3_6.png" id="7_0i6tj"]
[ext_resource type="Texture2D" uid="uid://bqgyxbhkmpmgc" path="res://img/nucleo_03/fondo/linea_3_7.png" id="8_12fop"]
[ext_resource type="Texture2D" uid="uid://bo8hhf04ab2w1" path="res://img/nucleo_03/fondo/linea_3_8.png" id="9_wsw4c"]
[ext_resource type="Texture2D" uid="uid://cw38587abifd0" path="res://img/nucleo_03/fondo/linea_3_9.png" id="10_i64hy"]
[ext_resource type="Texture2D" uid="uid://cudea8erofh5h" path="res://img/nucleo_03/fondo/linea_3_10.png" id="11_u3joh"]
[ext_resource type="Texture2D" uid="uid://bjobm2v5ielxp" path="res://img/nucleo_03/fondo/linea_3_11.png" id="12_3xd0b"]
[ext_resource type="Texture2D" uid="uid://b10bgte047exo" path="res://img/nucleo_03/fondo/linea_3_12.png" id="13_ephrt"]
[ext_resource type="Texture2D" uid="uid://b55rbq31tguou" path="res://img/nucleo_03/fondo/linea_3_13.png" id="14_cv45n"]
[ext_resource type="Texture2D" uid="uid://bx2es5llvrqeo" path="res://img/nucleo_03/fondo/linea_3_14.png" id="15_2ygwt"]
[ext_resource type="Texture2D" uid="uid://cc2voxoxy8a8e" path="res://img/nucleo_03/fondo/linea_3_15.png" id="16_ba8p6"]
[ext_resource type="Texture2D" uid="uid://xx6t2agq1u7t" path="res://img/nucleo_03/fondo/linea_3_16.png" id="17_v4tlr"]
[ext_resource type="Texture2D" uid="uid://c0gvyj88rtyvm" path="res://img/nucleo_03/fondo/linea_3_17.png" id="18_6viy5"]
[ext_resource type="Texture2D" uid="uid://b82oq83jgc6jh" path="res://img/nucleo_03/fondo/linea_3_18.png" id="19_7dp0h"]
[ext_resource type="Texture2D" uid="uid://3b6fixr7bayr" path="res://img/nucleo_03/fondo/linea_3_19.png" id="20_6pum7"]
[ext_resource type="Texture2D" uid="uid://buk6serwaxfum" path="res://img/nucleo_03/fondo/linea_3_20.png" id="21_6olnb"]
[ext_resource type="Texture2D" uid="uid://sspyi7g0fk0d" path="res://img/nucleo_03/fondo/linea_3_21.png" id="22_pnanx"]
[ext_resource type="Texture2D" uid="uid://camekogy2hddi" path="res://img/nucleo_03/fondo/linea_3_22.png" id="23_b5akg"]
[ext_resource type="Texture2D" uid="uid://8ujaxf81a175" path="res://img/nucleo_03/fondo/linea_3_23.png" id="24_5sqe8"]
[ext_resource type="Texture2D" uid="uid://chp2ujt5bgawc" path="res://img/nucleo_03/fondo/linea_3_24.png" id="25_q65fa"]
[ext_resource type="Texture2D" uid="uid://dowv6g5l3qhvm" path="res://img/nucleo_03/fondo/linea_3_25.png" id="26_m66rn"]
[ext_resource type="Texture2D" uid="uid://222pvgy7vqv" path="res://img/nucleo_03/fondo/linea_3_26.png" id="27_keljr"]
[ext_resource type="Texture2D" uid="uid://dp2tejyuv3kee" path="res://img/nucleo_03/fondo/linea_3_27.png" id="28_7hn41"]
[ext_resource type="Texture2D" uid="uid://xerpkk88ioib" path="res://img/nucleo_03/fondo/linea_3_28.png" id="29_uybq0"]
[ext_resource type="Texture2D" uid="uid://b7buugmk5t6rh" path="res://img/nucleo_03/fondo/linea_3_29.png" id="30_84g4i"]
[ext_resource type="Texture2D" uid="uid://bud5sahdm7qan" path="res://img/nucleo_03/fondo/linea_3_30.png" id="31_6mx6a"]
[ext_resource type="Texture2D" uid="uid://7i5a4q8l3bs2" path="res://img/nucleo_03/fondo/linea_3_31.png" id="32_cguod"]
[ext_resource type="Texture2D" uid="uid://dgc1vy2kes0lf" path="res://img/nucleo_03/fondo/linea_3_32.png" id="33_2j0fm"]
[ext_resource type="Texture2D" uid="uid://b415ca3ykw3bn" path="res://img/nucleo_03/fondo/linea_3_33.png" id="34_w75rx"]
[ext_resource type="Texture2D" uid="uid://dwdb5tjoyiey4" path="res://img/nucleo_03/fondo/linea_3_34.png" id="35_ffp8b"]
[ext_resource type="Texture2D" uid="uid://b04kr0dpiw3s8" path="res://img/nucleo_03/fondo/linea_3_35.png" id="36_xc2l6"]
[ext_resource type="Texture2D" uid="uid://dwynrj6m84185" path="res://img/nucleo_03/fondo/linea_3_36.png" id="37_d0rb3"]
[ext_resource type="Texture2D" uid="uid://dyjq3cgc7mf5q" path="res://img/nucleo_03/fondo/linea_3_37.png" id="38_l7jst"]
[ext_resource type="Texture2D" uid="uid://vy5tli3u35e1" path="res://img/nucleo_03/fondo/linea_3_38.png" id="39_si4gy"]
[ext_resource type="Texture2D" uid="uid://bsv18ocv21drh" path="res://img/nucleo_03/fondo/linea_3_39.png" id="40_cfuw5"]
[ext_resource type="Texture2D" uid="uid://dx2jfd0ibw5gh" path="res://img/nucleo_03/fondo/linea_3_40.png" id="41_w45jq"]
[ext_resource type="Texture2D" uid="uid://b0hdppft7mod" path="res://img/nucleo_03/fondo/linea_3_41.png" id="42_ic85h"]
[ext_resource type="Texture2D" uid="uid://bmcw5hllul2h0" path="res://img/nucleo_03/fondo/linea_3_42.png" id="43_3uoa6"]
[ext_resource type="Texture2D" uid="uid://bfrhs1pfo81yh" path="res://img/nucleo_03/fondo/linea_3_43.png" id="44_ctmpn"]
[ext_resource type="Texture2D" uid="uid://du1hc4nwrc8iw" path="res://img/nucleo_03/fondo/linea_3_44.png" id="45_0orfu"]
[ext_resource type="Texture2D" uid="uid://c0hghmpf5xw08" path="res://img/nucleo_03/fondo/linea_3_45.png" id="46_om7p0"]
[ext_resource type="Texture2D" uid="uid://d3tdlbulwsy0w" path="res://img/nucleo_03/fondo/linea_3_46.png" id="47_1pkps"]
[ext_resource type="Texture2D" uid="uid://g2cmdum31okr" path="res://img/nucleo_03/fondo/linea_3_47.png" id="48_j5nck"]
[ext_resource type="Texture2D" uid="uid://vcfngm2xkna3" path="res://img/nucleo_03/fondo/linea_3_48.png" id="49_fxujf"]
[ext_resource type="Texture2D" uid="uid://i6n8skf8lhfk" path="res://img/nucleo_03/fondo/linea_3_49.png" id="50_ep3e7"]
[ext_resource type="Texture2D" uid="uid://b4ld5af7oisno" path="res://img/nucleo_03/fondo/linea_3_50.png" id="51_8x44x"]
[ext_resource type="Texture2D" uid="uid://1havwht7s1ls" path="res://img/nucleo_03/fondo/linea_3_51.png" id="52_xw7hg"]
[ext_resource type="Texture2D" uid="uid://cix61psysig8f" path="res://img/nucleo_03/fondo/linea_3_52.png" id="53_ia3mi"]
[ext_resource type="Texture2D" uid="uid://13wxh4l6i25c" path="res://img/nucleo_03/fondo/linea_3_53.png" id="54_l1aqq"]
[ext_resource type="Texture2D" uid="uid://bpvmndkritrgi" path="res://img/nucleo_03/fondo/linea_3_54.png" id="55_c374u"]
[ext_resource type="Texture2D" uid="uid://sh33pl6kis7r" path="res://img/nucleo_03/fondo/linea_3_55.png" id="56_rt0ee"]
[ext_resource type="Texture2D" uid="uid://br0px7otvhc2m" path="res://img/nucleo_03/fondo/linea_3_56.png" id="57_nl4mb"]
[ext_resource type="Texture2D" uid="uid://dhsfdbskr8wbd" path="res://img/nucleo_03/fondo/linea_3_57.png" id="58_f2se6"]
[ext_resource type="Texture2D" uid="uid://bvsajii7p2vy0" path="res://img/nucleo_03/fondo/linea_3_58.png" id="59_46rmc"]
[ext_resource type="Texture2D" uid="uid://bsl54u8ajyc42" path="res://img/nucleo_03/fondo/linea_3_59.png" id="60_8chu5"]
[ext_resource type="Texture2D" uid="uid://cwol3qrkq0vx3" path="res://img/nucleo_03/fondo/linea_3_60.png" id="61_tjd0y"]
[ext_resource type="Texture2D" uid="uid://cxfx5jcyawjd5" path="res://img/nucleo_03/fondo/linea_3_61.png" id="62_a514i"]
[ext_resource type="Texture2D" uid="uid://c40lggta1bpd7" path="res://img/nucleo_03/fondo/linea_3_62.png" id="63_hgngp"]
[ext_resource type="Texture2D" uid="uid://b41t7bsabquad" path="res://img/nucleo_03/fondo/linea_3_63.png" id="64_jdgtp"]
[ext_resource type="Texture2D" uid="uid://cxkkksvv87hho" path="res://img/nucleo_03/fondo/linea_3_64.png" id="65_b1sui"]
[ext_resource type="Texture2D" uid="uid://cbwb5bnx4a1j" path="res://img/nucleo_03/fondo/linea_3_65.png" id="66_07lq1"]
[ext_resource type="Texture2D" uid="uid://hjnuye3s83s2" path="res://img/nucleo_03/fondo/linea_3_66.png" id="67_rrgc3"]
[ext_resource type="Texture2D" uid="uid://bcum86cknqhun" path="res://img/nucleo_03/fondo/linea_3_67.png" id="68_6fbpu"]
[ext_resource type="Texture2D" uid="uid://baf3i8wq1ktwy" path="res://img/nucleo_03/fondo/linea_3_68.png" id="69_dw7id"]
[ext_resource type="Texture2D" uid="uid://c4efd8ky58w4o" path="res://img/nucleo_03/fondo/linea_3_69.png" id="70_vey8y"]
[ext_resource type="Texture2D" uid="uid://kh1vsx1dmx5l" path="res://img/nucleo_03/fondo/linea_3_70.png" id="71_oqasi"]
[ext_resource type="Texture2D" uid="uid://dhg2si0e3c0th" path="res://img/nucleo_03/fondo/linea_3_71.png" id="72_k4l4d"]
[ext_resource type="Texture2D" uid="uid://b7kyhnolwr5ot" path="res://img/nucleo_03/fondo/linea_3_72.png" id="73_na037"]
[ext_resource type="Texture2D" uid="uid://bc67u5iw553b0" path="res://img/nucleo_03/fondo/linea_3_73.png" id="74_8r5bq"]
[ext_resource type="Texture2D" uid="uid://bsjgnyoag3pl1" path="res://img/nucleo_03/fondo/linea_3_74.png" id="75_d7x8m"]
[ext_resource type="Texture2D" uid="uid://dfd4u1v47yhml" path="res://img/nucleo_03/fondo/linea_3_75.png" id="76_u0gdv"]
[ext_resource type="Texture2D" uid="uid://kdhqyjr473e0" path="res://img/nucleo_03/fondo/linea_3_76.png" id="77_otmjn"]
[ext_resource type="Texture2D" uid="uid://dwjb0k81ljddh" path="res://img/nucleo_03/fondo/linea_3_77.png" id="78_it8le"]
[ext_resource type="Texture2D" uid="uid://bfmfboq8u2wxt" path="res://img/nucleo_03/fondo/linea_3_78.png" id="79_qnjyd"]
[ext_resource type="Texture2D" uid="uid://d3f56rf8ggiej" path="res://img/nucleo_03/fondo/linea_3_79.png" id="80_lswvx"]
[ext_resource type="Texture2D" uid="uid://d12xylu7uvyt3" path="res://img/nucleo_03/fondo/linea_3_80.png" id="81_ne6pl"]
[ext_resource type="Texture2D" uid="uid://bi8tjcqxwdrpk" path="res://img/nucleo_03/fondo/linea_3_81.png" id="82_j4ved"]
[ext_resource type="Texture2D" uid="uid://85ul125l2gno" path="res://img/nucleo_03/fondo/linea_3_82.png" id="83_xdm6e"]
[ext_resource type="Texture2D" uid="uid://kl3u0531yvub" path="res://img/nucleo_03/fondo/linea_3_83.png" id="84_k00ls"]
[ext_resource type="Texture2D" uid="uid://jaeeo1pqxssy" path="res://img/nucleo_03/fondo/linea_3_84.png" id="85_ohcbx"]
[ext_resource type="Texture2D" uid="uid://bict0ys8mmxr7" path="res://img/nucleo_03/fondo/linea_3_85.png" id="86_e28g7"]
[ext_resource type="Texture2D" uid="uid://chb5a1mjlq5gq" path="res://img/nucleo_03/fondo/linea_3_86.png" id="87_xf7cm"]
[ext_resource type="Texture2D" uid="uid://dns0mjdpyivnt" path="res://img/nucleo_03/fondo/linea_3_87.png" id="88_4sw1i"]
[ext_resource type="Texture2D" uid="uid://bmxs7nsvbqury" path="res://img/nucleo_03/fondo/linea_3_88.png" id="89_nue8h"]
[ext_resource type="Texture2D" uid="uid://cttxqvkord8n1" path="res://img/nucleo_03/fondo/linea_3_89.png" id="90_meogj"]
[ext_resource type="Texture2D" uid="uid://f84wae2h5war" path="res://img/nucleo_03/fondo/linea_3_90.png" id="91_1scxh"]
[ext_resource type="Texture2D" uid="uid://c5ubc0mpvauci" path="res://img/nucleo_03/fondo/linea_3_91.png" id="92_dmirn"]
[ext_resource type="Texture2D" uid="uid://dud4xnorinuiw" path="res://img/nucleo_03/fondo/linea_3_92.png" id="93_mnyht"]
[ext_resource type="Texture2D" uid="uid://eaplau62xw3c" path="res://img/nucleo_03/fondo/linea_3_93.png" id="94_drrr2"]
[ext_resource type="Texture2D" uid="uid://3hu6u1mqnafs" path="res://img/nucleo_03/fondo/linea_3_94.png" id="95_r1ln4"]
[ext_resource type="Texture2D" uid="uid://y6wlmhh6pn66" path="res://img/nucleo_03/fondo/linea_3_95.png" id="96_snvmo"]
[ext_resource type="Texture2D" uid="uid://qk3sthxl1yk6" path="res://img/nucleo_03/fondo/linea_3_96.png" id="97_7lveh"]
[ext_resource type="Texture2D" uid="uid://bppde41ldpea2" path="res://img/nucleo_03/fondo/linea_3_97.png" id="98_pqcae"]
[ext_resource type="Texture2D" uid="uid://bxettx8mwgmf2" path="res://img/nucleo_03/fondo/linea_3_98.png" id="99_ocwrc"]
[ext_resource type="Texture2D" uid="uid://t2iiiqmrljhh" path="res://img/nucleo_03/fondo/linea_3_99.png" id="100_72sln"]
[ext_resource type="Texture2D" uid="uid://c03xhd4djxnp8" path="res://img/nucleo_03/fondo/linea_3_100.png" id="101_dy0yh"]
[ext_resource type="Texture2D" uid="uid://c6juco6pak8f8" path="res://img/nucleo_03/actividad_02/base.png" id="102_3wxpy"]
[ext_resource type="Texture2D" uid="uid://ek1kknfum4v2" path="res://img/nucleo_03/actividad_02/brazo_izquierdo.png" id="103_squor"]
[ext_resource type="Texture2D" uid="uid://dd5weeiht75vh" path="res://img/nucleo_03/actividad_02/brazo_derecho.png" id="104_76w14"]
[ext_resource type="Texture2D" uid="uid://bw0rtsrsm8bee" path="res://img/nucleo_03/actividad_02/torso.png" id="105_ha0g3"]
[ext_resource type="Texture2D" uid="uid://d3l2lp5ger4ub" path="res://img/nucleo_03/actividad_02/cabeza.png" id="106_k340v"]
[ext_resource type="Texture2D" uid="uid://dfltg8npc54x7" path="res://img/nucleo_03/actividad_02/pierna_derecha.png" id="107_ef3x4"]
[ext_resource type="Texture2D" uid="uid://bn7td2mtmnasd" path="res://img/nucleo_03/actividad_02/pierna_izquierda.png" id="108_6r6cw"]
[ext_resource type="Texture2D" uid="uid://chhee35oyxx6d" path="res://img/nucleo_03/actividad_02/info.png" id="109_5woix"]
[ext_resource type="PackedScene" uid="uid://bgs2ty3i0fjmf" path="res://scenes/elementos/boton_s.tscn" id="110_0k33v"]
[ext_resource type="Texture2D" uid="uid://gcm42nibnsdm" path="res://img/nucleo_03/actividad_02/final.png" id="111_p07h4"]

[sub_resource type="SpriteFrames" id="SpriteFrames_0qyk1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_3nytm")
}, {
"duration": 1.0,
"texture": ExtResource("3_02kqa")
}, {
"duration": 1.0,
"texture": ExtResource("4_1yo4i")
}, {
"duration": 1.0,
"texture": ExtResource("5_adinq")
}, {
"duration": 1.0,
"texture": ExtResource("6_7de5t")
}, {
"duration": 1.0,
"texture": ExtResource("7_0i6tj")
}, {
"duration": 1.0,
"texture": ExtResource("8_12fop")
}, {
"duration": 1.0,
"texture": ExtResource("9_wsw4c")
}, {
"duration": 1.0,
"texture": ExtResource("10_i64hy")
}, {
"duration": 1.0,
"texture": ExtResource("11_u3joh")
}, {
"duration": 1.0,
"texture": ExtResource("12_3xd0b")
}, {
"duration": 1.0,
"texture": ExtResource("13_ephrt")
}, {
"duration": 1.0,
"texture": ExtResource("14_cv45n")
}, {
"duration": 1.0,
"texture": ExtResource("15_2ygwt")
}, {
"duration": 1.0,
"texture": ExtResource("16_ba8p6")
}, {
"duration": 1.0,
"texture": ExtResource("17_v4tlr")
}, {
"duration": 1.0,
"texture": ExtResource("18_6viy5")
}, {
"duration": 1.0,
"texture": ExtResource("19_7dp0h")
}, {
"duration": 1.0,
"texture": ExtResource("20_6pum7")
}, {
"duration": 1.0,
"texture": ExtResource("21_6olnb")
}, {
"duration": 1.0,
"texture": ExtResource("22_pnanx")
}, {
"duration": 1.0,
"texture": ExtResource("23_b5akg")
}, {
"duration": 1.0,
"texture": ExtResource("24_5sqe8")
}, {
"duration": 1.0,
"texture": ExtResource("25_q65fa")
}, {
"duration": 1.0,
"texture": ExtResource("26_m66rn")
}, {
"duration": 1.0,
"texture": ExtResource("27_keljr")
}, {
"duration": 1.0,
"texture": ExtResource("28_7hn41")
}, {
"duration": 1.0,
"texture": ExtResource("29_uybq0")
}, {
"duration": 1.0,
"texture": ExtResource("30_84g4i")
}, {
"duration": 1.0,
"texture": ExtResource("31_6mx6a")
}, {
"duration": 1.0,
"texture": ExtResource("32_cguod")
}, {
"duration": 1.0,
"texture": ExtResource("33_2j0fm")
}, {
"duration": 1.0,
"texture": ExtResource("34_w75rx")
}, {
"duration": 1.0,
"texture": ExtResource("35_ffp8b")
}, {
"duration": 1.0,
"texture": ExtResource("36_xc2l6")
}, {
"duration": 1.0,
"texture": ExtResource("37_d0rb3")
}, {
"duration": 1.0,
"texture": ExtResource("38_l7jst")
}, {
"duration": 1.0,
"texture": ExtResource("39_si4gy")
}, {
"duration": 1.0,
"texture": ExtResource("40_cfuw5")
}, {
"duration": 1.0,
"texture": ExtResource("41_w45jq")
}, {
"duration": 1.0,
"texture": ExtResource("42_ic85h")
}, {
"duration": 1.0,
"texture": ExtResource("43_3uoa6")
}, {
"duration": 1.0,
"texture": ExtResource("44_ctmpn")
}, {
"duration": 1.0,
"texture": ExtResource("45_0orfu")
}, {
"duration": 1.0,
"texture": ExtResource("46_om7p0")
}, {
"duration": 1.0,
"texture": ExtResource("47_1pkps")
}, {
"duration": 1.0,
"texture": ExtResource("48_j5nck")
}, {
"duration": 1.0,
"texture": ExtResource("49_fxujf")
}, {
"duration": 1.0,
"texture": ExtResource("50_ep3e7")
}, {
"duration": 1.0,
"texture": ExtResource("51_8x44x")
}, {
"duration": 1.0,
"texture": ExtResource("52_xw7hg")
}, {
"duration": 1.0,
"texture": ExtResource("53_ia3mi")
}, {
"duration": 1.0,
"texture": ExtResource("54_l1aqq")
}, {
"duration": 1.0,
"texture": ExtResource("55_c374u")
}, {
"duration": 1.0,
"texture": ExtResource("56_rt0ee")
}, {
"duration": 1.0,
"texture": ExtResource("57_nl4mb")
}, {
"duration": 1.0,
"texture": ExtResource("58_f2se6")
}, {
"duration": 1.0,
"texture": ExtResource("59_46rmc")
}, {
"duration": 1.0,
"texture": ExtResource("60_8chu5")
}, {
"duration": 1.0,
"texture": ExtResource("61_tjd0y")
}, {
"duration": 1.0,
"texture": ExtResource("62_a514i")
}, {
"duration": 1.0,
"texture": ExtResource("63_hgngp")
}, {
"duration": 1.0,
"texture": ExtResource("64_jdgtp")
}, {
"duration": 1.0,
"texture": ExtResource("65_b1sui")
}, {
"duration": 1.0,
"texture": ExtResource("66_07lq1")
}, {
"duration": 1.0,
"texture": ExtResource("67_rrgc3")
}, {
"duration": 1.0,
"texture": ExtResource("68_6fbpu")
}, {
"duration": 1.0,
"texture": ExtResource("69_dw7id")
}, {
"duration": 1.0,
"texture": ExtResource("70_vey8y")
}, {
"duration": 1.0,
"texture": ExtResource("71_oqasi")
}, {
"duration": 1.0,
"texture": ExtResource("72_k4l4d")
}, {
"duration": 1.0,
"texture": ExtResource("73_na037")
}, {
"duration": 1.0,
"texture": ExtResource("74_8r5bq")
}, {
"duration": 1.0,
"texture": ExtResource("75_d7x8m")
}, {
"duration": 1.0,
"texture": ExtResource("76_u0gdv")
}, {
"duration": 1.0,
"texture": ExtResource("77_otmjn")
}, {
"duration": 1.0,
"texture": ExtResource("78_it8le")
}, {
"duration": 1.0,
"texture": ExtResource("79_qnjyd")
}, {
"duration": 1.0,
"texture": ExtResource("80_lswvx")
}, {
"duration": 1.0,
"texture": ExtResource("81_ne6pl")
}, {
"duration": 1.0,
"texture": ExtResource("82_j4ved")
}, {
"duration": 1.0,
"texture": ExtResource("83_xdm6e")
}, {
"duration": 1.0,
"texture": ExtResource("84_k00ls")
}, {
"duration": 1.0,
"texture": ExtResource("85_ohcbx")
}, {
"duration": 1.0,
"texture": ExtResource("86_e28g7")
}, {
"duration": 1.0,
"texture": ExtResource("87_xf7cm")
}, {
"duration": 1.0,
"texture": ExtResource("88_4sw1i")
}, {
"duration": 1.0,
"texture": ExtResource("89_nue8h")
}, {
"duration": 1.0,
"texture": ExtResource("90_meogj")
}, {
"duration": 1.0,
"texture": ExtResource("91_1scxh")
}, {
"duration": 1.0,
"texture": ExtResource("92_dmirn")
}, {
"duration": 1.0,
"texture": ExtResource("93_mnyht")
}, {
"duration": 1.0,
"texture": ExtResource("94_drrr2")
}, {
"duration": 1.0,
"texture": ExtResource("95_r1ln4")
}, {
"duration": 1.0,
"texture": ExtResource("96_snvmo")
}, {
"duration": 1.0,
"texture": ExtResource("97_7lveh")
}, {
"duration": 1.0,
"texture": ExtResource("98_pqcae")
}, {
"duration": 1.0,
"texture": ExtResource("99_ocwrc")
}, {
"duration": 1.0,
"texture": ExtResource("100_72sln")
}, {
"duration": 1.0,
"texture": ExtResource("101_dy0yh")
}],
"loop": true,
"name": &"default",
"speed": 25.0
}]

[node name="Actividad02" type="Node2D"]
script = ExtResource("1_4o8yq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(0.250818, 0.250818, 0.250818, 1)
scale = Vector2(3.2, 3.19527)
sprite_frames = SubResource("SpriteFrames_0qyk1")
centered = false

[node name="Base" type="Sprite2D" parent="."]
position = Vector2(940, 547)
texture = ExtResource("102_3wxpy")

[node name="BrazoIzquierdo" type="Sprite2D" parent="Base"]
visible = false
position = Vector2(-183, 20)
texture = ExtResource("103_squor")

[node name="BrazoDerecho" type="Sprite2D" parent="Base"]
visible = false
position = Vector2(191, 35)
texture = ExtResource("104_76w14")

[node name="Torso2" type="Sprite2D" parent="Base"]
visible = false
position = Vector2(-1, -3)
texture = ExtResource("105_ha0g3")

[node name="Cabeza2" type="Sprite2D" parent="Base"]
visible = false
position = Vector2(3, -242)
texture = ExtResource("106_k340v")

[node name="PiernaIzquierda" type="Sprite2D" parent="Base"]
visible = false
position = Vector2(-49, 199)
texture = ExtResource("107_ef3x4")

[node name="PiernaDerecha" type="Sprite2D" parent="Base"]
visible = false
position = Vector2(39, 199)
texture = ExtResource("108_6r6cw")

[node name="PiernaD" type="Button" parent="Base"]
modulate = Color(1, 1, 1, 0)
offset_left = 12.0
offset_top = 102.0
offset_right = 51.0
offset_bottom = 242.0

[node name="PiernaI" type="Button" parent="Base"]
modulate = Color(1, 1, 1, 0)
offset_left = -52.0
offset_top = 99.0
offset_right = -17.0
offset_bottom = 250.0

[node name="BrazoI" type="Button" parent="Base"]
modulate = Color(1, 1, 1, 0)
offset_left = -81.0
offset_top = -25.0
offset_right = -40.0
offset_bottom = 98.0
rotation = 0.345073

[node name="BrazoD" type="Button" parent="Base"]
modulate = Color(1, 1, 1, 0)
offset_left = 40.0
offset_top = -17.0
offset_right = 78.0
offset_bottom = 109.0
rotation = -0.326602

[node name="Torso" type="Button" parent="Base"]
modulate = Color(1, 1, 1, 0)
offset_left = -36.0
offset_top = -86.0
offset_right = 34.0
offset_bottom = 87.0

[node name="Cabeza" type="Button" parent="Base"]
modulate = Color(1, 1, 1, 0)
offset_left = -103.0
offset_top = -302.0
offset_right = 99.0
offset_bottom = -108.0

[node name="BrazoIzquierdo2" type="Sprite2D" parent="Base"]
visible = false
position = Vector2(-183, 20)
texture = ExtResource("103_squor")

[node name="BrazoDerecho2" type="Sprite2D" parent="Base"]
visible = false
position = Vector2(191, 35)
texture = ExtResource("104_76w14")

[node name="Torso3" type="Sprite2D" parent="Base"]
visible = false
position = Vector2(-1, -3)
texture = ExtResource("105_ha0g3")

[node name="Cabeza3" type="Sprite2D" parent="Base"]
visible = false
position = Vector2(3, -242)
texture = ExtResource("106_k340v")

[node name="PiernaIzquierda2" type="Sprite2D" parent="Base"]
visible = false
position = Vector2(-49, 199)
texture = ExtResource("107_ef3x4")

[node name="PiernaDerecha2" type="Sprite2D" parent="Base"]
visible = false
position = Vector2(39, 199)
texture = ExtResource("108_6r6cw")

[node name="Info" type="Sprite2D" parent="Base"]
visible = false
position = Vector2(653, -184)
scale = Vector2(0.880805, 0.852381)
texture = ExtResource("109_5woix")

[node name="BotonS" parent="." instance=ExtResource("110_0k33v")]
visible = false
offset_left = 878.0
offset_top = 918.0
offset_right = 1006.0
offset_bottom = 963.0
color = Color(0, 0.0901961, 0.92549, 1)
texto = "ENVIAR"

[node name="Final" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("111_p07h4")
centered = false

[node name="BotonS2" parent="Final" instance=ExtResource("110_0k33v")]
offset_left = 907.0
offset_top = 615.0
offset_right = 1035.0
offset_bottom = 660.0
color = Color(0, 0.0901961, 0.92549, 1)
texto = "CERRAR"

[connection signal="button_down" from="Base/PiernaD" to="." method="_on_pierna_d_button_down"]
[connection signal="mouse_entered" from="Base/PiernaD" to="." method="_on_pierna_d_mouse_entered"]
[connection signal="mouse_exited" from="Base/PiernaD" to="." method="_on_pierna_d_mouse_exited"]
[connection signal="button_down" from="Base/PiernaI" to="." method="_on_pierna_i_button_down"]
[connection signal="mouse_entered" from="Base/PiernaI" to="." method="_on_pierna_i_mouse_entered"]
[connection signal="mouse_exited" from="Base/PiernaI" to="." method="_on_pierna_i_mouse_exited"]
[connection signal="button_down" from="Base/BrazoI" to="." method="_on_brazo_i_button_down"]
[connection signal="mouse_entered" from="Base/BrazoI" to="." method="_on_brazo_i_mouse_entered"]
[connection signal="mouse_exited" from="Base/BrazoI" to="." method="_on_brazo_i_mouse_exited"]
[connection signal="button_down" from="Base/BrazoD" to="." method="_on_brazo_d_button_down"]
[connection signal="mouse_entered" from="Base/BrazoD" to="." method="_on_brazo_d_mouse_entered"]
[connection signal="mouse_exited" from="Base/BrazoD" to="." method="_on_brazo_d_mouse_exited"]
[connection signal="button_down" from="Base/Torso" to="." method="_on_torso_button_down"]
[connection signal="mouse_entered" from="Base/Torso" to="." method="_on_torso_mouse_entered"]
[connection signal="mouse_exited" from="Base/Torso" to="." method="_on_torso_mouse_exited"]
[connection signal="button_down" from="Base/Cabeza" to="." method="_on_cabeza_button_down"]
[connection signal="mouse_entered" from="Base/Cabeza" to="." method="_on_cabeza_mouse_entered"]
[connection signal="mouse_exited" from="Base/Cabeza" to="." method="_on_cabeza_mouse_exited"]
[connection signal="button_down" from="BotonS" to="." method="_on_boton_s_button_down"]
[connection signal="button_down" from="Final/BotonS2" to="." method="_on_boton_s_2_button_down"]
